tests/src/frontend/syntax/invalid/for_c_5.sk
fun main(): void {
  i = 0;
  for (; i < 10;) {
    !i = i + 1;
  };
}
